--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -8,11 +8,17 @@
     <main>
         <aside class="sidebar">
             <h2>Próximos Shows</h2>
-            <ul>
-                <li>10/06 - São Paulo, SP</li>
-                <li>15/06 - Rio de Janeiro, RJ</li>
-                <li>20/06 - Belo Horizonte, MG</li>
-            </ul>
+    <ul>
+        {% if eventos %}
+            {% for evento in eventos %}
+                <li>
+                    {{ evento.data|date:"d/m" }} - {{ evento.titulo }}
+                </li>
+            {% endfor %}
+        {% else %}
+            <li>Sem shows no momento.</li>
+        {% endif %}
+    </ul>
         </aside>
         
         {% block content %}{% endblock content %}
